[gd_scene load_steps=3 format=3 uid="uid://rjsjwf2ojp33"]

[ext_resource type="Script" path="res://Scripts/Lives.gd" id="1_8tcvl"]
[ext_resource type="Texture2D" uid="uid://b1g5co5ht1xhk" path="res://Textures/Heart.png" id="2_rr43c"]

[node name="Lives" type="Label"]
offset_left = 512.0
offset_right = 640.0
offset_bottom = 32.0
text = "Lives:"
vertical_alignment = 1
script = ExtResource("1_8tcvl")
metadata/_edit_group_ = true

[node name="Life_1" type="Sprite2D" parent="."]
position = Vector2(59, 17)
scale = Vector2(2, 2)
texture = ExtResource("2_rr43c")

[node name="Life_2" type="Sprite2D" parent="."]
position = Vector2(83, 17)
scale = Vector2(2, 2)
texture = ExtResource("2_rr43c")

[node name="Life_3" type="Sprite2D" parent="."]
position = Vector2(107, 17)
scale = Vector2(2, 2)
texture = ExtResource("2_rr43c")
